doc: add Readme and improvements some files

--- a/test/index.html
+++ b/test/index.html
@@ -131,7 +131,7 @@
 
     <script>
       $(document).ready(function(){
-        var ellipse = require('ellipse/index.js');
+        var ellipse = require('ellipse');
         var el = $('#ellipse');
 
         function build(width, height, c, opts, r) {
