--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         background-color: rgba(200, 255, 200, 0.3);
         border: 1px solid rgba(0, 0, 0, 0.1);
         position: relative;
+        margin-bottom: 100px;
       }
 
       .satellite {
