add components counter

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       .controls {
         position: absolute;
-        right: 20px;
+        right: 100px;
         top: 100px;
         text-align: right;
       }
@@ -103,10 +103,35 @@
         text-decoration: none;
       }
 
+      #counter {
+        position: fixed;
+        top: 4.5em;
+        right: -6.5em;
+        width: 400px;
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        background-color: #f0f0f0;
+        padding: 1px 0;
+        overflow: hidden;
+        -moz-box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+        -webkit-box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+        box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+      }
+
+      #counter img {
+        display: block;
+        margin: 0 auto;
+      }
+
+
     </style>
   </head>
   <body>
     <div id="ribbon"><a href="http://github.com/component/ellipse">Fork me on GitHub</a></div>
+
+    <div id="counter">
+      <img src="https://component.jit.su/component-badge.svg" height="40" />
+    </div>
     <h2>Ellipse</h2>
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="build.js"></script>
